Sprint 3 Submission
Marker logic, Ray path drawing, other fixes